<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green_500">

        <TextView
            android:id="@+id/followersTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintStart_toEndOf="@+id/followersText"
            app:layout_constraintTop_toBottomOf="@+id/publicReposTextView"
            tools:text="24" />

        <TextView
            android:id="@+id/followersText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/followers"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/avatarImageView"
            app:layout_constraintTop_toBottomOf="@+id/publicReposText"
            tools:text="Followers:" />

        <TextView
            android:id="@+id/followingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintStart_toEndOf="@+id/followingText"
            app:layout_constraintTop_toBottomOf="@+id/followersTextView"
            tools:text="30" />

        <TextView
            android:id="@+id/followingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/following"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/avatarImageView"
            app:layout_constraintTop_toBottomOf="@+id/followersText"
            tools:text="Following:" />

        <TextView
            android:id="@+id/publicReposTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_small"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintStart_toEndOf="@+id/publicReposText"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
            tools:text="20" />

        <TextView
            android:id="@+id/publicReposText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/public_repositories"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/avatarImageView"
            app:layout_constraintTop_toBottomOf="@id/nameText" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:text="@string/name_with_semicolon"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/avatarImageView"
            app:layout_constraintTop_toTopOf="@id/avatarImageView" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintStart_toEndOf="@id/nameText"
            app:layout_constraintTop_toTopOf="@id/nameText"
            tools:text="Michael Jordan" />

        <ImageView
            android:id="@+id/avatarImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_small"
            android:background="@drawable/layout_rounded_bg"
            android:clipToOutline="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/reposText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:background="@color/purple_500"
            android:text="@string/repositories"
            android:textAlignment="center"
            android:textColor="@color/green_500"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/followingText" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/userReposRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@color/purple_500"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reposText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
